--- a/Challenge_HW1.ipynb
+++ b/Challenge_HW1.ipynb
@@ -12,6 +12,7 @@
     "import os\n",
     "\n",
     "chat = ChatOpenAI(\n",
+    "  model_name=\"gpt-3.5-turbo\",\n",
     "  temperature = 0.1,\n",
     "  streaming = True,\n",
     "  callbacks=[StreamingStdOutCallbackHandler()],\n",
