--- a/Challenge_HW2.ipynb
+++ b/Challenge_HW2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import FewShotPromptTemplate, ChatPromptTemplate, PromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate, FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "import os\n",
     "    \n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI: \n",
+      "   Here is what I know about Parasite:\n",
+      "   Director: Bong Joon-ho\n",
+      "   Actors: Song Kang-ho, Lee Sun-kyun, Cho Yeo-jeong\n",
+      "   Budget: 11 million ($)\n",
+      "   Box Office: 266 million ($)\n",
+      "   Genre: Thriller\n",
+      "   Sysnopsis: Parasite is a South Korean film about a poor family who infiltrates a wealthy household.content='AI: \\n   Here is what I know about Parasite:\\n   Director: Bong Joon-ho\\n   Actors: Song Kang-ho, Lee Sun-kyun, Cho Yeo-jeong\\n   Budget: 11 million ($)\\n   Box Office: 266 million ($)\\n   Genre: Thriller\\n   Sysnopsis: Parasite is a South Korean film about a poor family who infiltrates a wealthy household.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "example_prompt = PromptTemplate.from_template(\n",
+    "    \"Human: What do you know about {movie}? \\n AI: {answer}\"\n",
+    ")\n",
+    "\n",
+    "example_prompt = FewShotPromptTemplate(\n",
+    "  example_prompt=example_prompt,\n",
+    "  examples=examples,\n",
+    "  suffix=\"Human: What do you know about {movie}?\",\n",
+    "  input_variables=[\"movie\"],\n",
+    ")\n",
+    "\n",
+    "chain = example_prompt | chat\n",
+    "\n",
+    "print(chain.invoke({\"movie\": \"Parasite\"}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +118,7 @@
       "   Budget: 11 million ($)\n",
       "   Box Office: 266 million ($)\n",
       "   Genre: Thriller/Drama\n",
-      "   Synopsis: Parasite is a South Korean film that follows the members of a poor family who scheme to become employed by a wealthy family. The film explores themes of class division and social inequality. It won multiple awards, including the Academy Award for Best Picture in 2020.content='Information about Parasite:\\n   Director: Bong Joon-ho\\n   Actors: Song Kang-ho, Lee Sun-kyun, Cho Yeo-jeong\\n   Budget: 11 million ($)\\n   Box Office: 266 million ($)\\n   Genre: Thriller/Drama\\n   Synopsis: Parasite is a South Korean film that follows the members of a poor family who scheme to become employed by a wealthy family. The film explores themes of class division and social inequality. It won multiple awards, including the Academy Award for Best Picture in 2020.'\n"
+      "   Synopsis: Parasite is a South Korean film that follows the story of a poor family who schemes to work for a wealthy family by posing as unrelated, highly qualified individuals. The film explores themes of class struggle and social inequality. It won numerous awards, including the Academy Award for Best Picture in 2020.content='Information about Parasite:\\n   Director: Bong Joon-ho\\n   Actors: Song Kang-ho, Lee Sun-kyun, Cho Yeo-jeong\\n   Budget: 11 million ($)\\n   Box Office: 266 million ($)\\n   Genre: Thriller/Drama\\n   Synopsis: Parasite is a South Korean film that follows the story of a poor family who schemes to work for a wealthy family by posing as unrelated, highly qualified individuals. The film explores themes of class struggle and social inequality. It won numerous awards, including the Academy Award for Best Picture in 2020.'\n"
      ]
     }
    ],
@@ -93,16 +131,18 @@
     "  ]\n",
     ")\n",
     "\n",
-    "example_prompt = FewShotChatMessagePromptTemplate(\n",
+    "chat_prompt = FewShotChatMessagePromptTemplate(\n",
     "  example_prompt=example_prompt,\n",
     "  examples=examples,\n",
     ")\n",
     "\n",
-    "final_prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You are a movie expert. You have to give me the information about the movie.\"),\n",
-    "  example_prompt,\n",
-    "  (\"human\", \"What do you know about {movie}?\"),\n",
-    "])\n",
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "  [\n",
+    "    (\"system\", \"You are a movie expert. You have to give me the information about the movie.\"),\n",
+    "    chat_prompt,\n",
+    "    (\"human\", \"What do you know about {movie}?\"),\n",
+    "  ]\n",
+    ")\n",
     "\n",
     "chain = final_prompt | chat\n",
     "\n",
